--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,1 +1,8 @@
-{}
+{
+  "not-email": "Вы должен заполнить e-mail в следующем формате: example@example.com",
+  "not-unique-email": "Аккаунт с данным e-mail уже зарегистрирован",
+  "not-correct-length-password": "Пароль должен быть от 6 до 64 символов",
+  "not-correct-length-username": "Имя пользователя должно быть от 4 до 30 символов",
+  "forbidden-symbols-username": "Имя пользователя должно состоять только из букв и цифр",
+  "not-unique-username": "Имя пользователя занято"
+}
