--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
   "not-unique-email": "Account with this e-mail is already registered",
   "not-correct-length-password": "Password must be between 6 and 64 characters",
   "not-correct-length-username": "Username must be between 4 and 30 characters",
+  "not-correct-length-usernameOrEmail": "Username must be between 4 and 30 characters or enter an e-mail in the following format: example@example.com",
   "forbidden-symbols-username": "The username must contain only letters and numbers",
   "not-unique-username": "Username is not available",
   "no-username-password": "You must specify username(e-mail) and password",
