--- a/locales/ru.json
+++ b/locales/ru.json
@@ -3,6 +3,7 @@
   "not-unique-email": "Аккаунт с данным e-mail уже зарегистрирован",
   "not-correct-length-password": "Пароль должен быть от 6 до 64 символов",
   "not-correct-length-username": "Имя пользователя должно быть от 4 до 30 символов",
+  "not-correct-length-usernameOrEmail": "Имя пользователя должно быть от 4 до 30 символов или введите адрес электронной почты в следующем формате: example@example.com",
   "forbidden-symbols-username": "Имя пользователя должно состоять только из букв и цифр",
   "not-unique-username": "Имя пользователя занято",
   "no-username-password": "Необходимо указать имя пользователя(e-mail) и пароль",
