Name of fields(title, article) in the trip model

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -9,11 +9,11 @@
   "no-username-password": "Необходимо указать имя пользователя(e-mail) и пароль",
   "incorrect-username-password": "Неправильное имя пользователя(e-mail) или пароль",
   "user-not-logged": "Вы должны быть авторизованы",
-  "not-correct-trip-name-length": "Название вашей поездки должно быть до 150 символов",
+  "not-correct-trip-title-length": "Заголовок вашей статьи о поездке не должен быть длиннее 150 символов",
   "not-correct-trip-country-code": "Некорректный код страны",
   "not-correct-trip-city-length": "Название города должно быть от 2 до 300 символов",
   "not-correct-trip-start-date": "Неккоректная дата начала поездки",
   "not-correct-trip-end-date": "Неккоректная дата окончания поездки",
-  "not-correct-trip-description-length": "Описание поездки не должно быть длиннее 2500 символов",
+  "not-correct-trip-article-length": "Длина статьи о поездке не должна быть длиннее 2500 символов",
   "trip-not-found": "Поездка не найдена"
 }
