--- a/locales/en.json
+++ b/locales/en.json
@@ -9,11 +9,11 @@
   "no-username-password": "You must specify username(e-mail) and password",
   "incorrect-username-password": "Incorrect username(e-mail) or password",
   "user-not-logged": "You must be logged in",
-  "not-correct-trip-name-length": "Your trip name must be up to 150 characters",
+  "not-correct-trip-title-length": "The title of your travel article should not be longer than 150 characters",
   "not-correct-trip-country-code": "Invalid country code",
   "not-correct-trip-city-length": "City name must be between 2 and 300 characters",
   "not-correct-trip-start-date": "Invalid start date",
   "not-correct-trip-end-date": "Invalid end date",
-  "not-correct-trip-description-length": "Trip description must not be longer than 2500 characters",
+  "not-correct-trip-article-length": "Trip article should not be longer than 2500 characters",
   "trip-not-found": "Trip not found"
 }
