Validating fields when creating an account, session

--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,11 +1,14 @@
 {
-  "not-email": "Вы должен заполнить e-mail в следующем формате: example@example.com",
+  "no-email-field": "Email обязателен к заполнению",
+  "not-email": "Email должен соответствовать формату: example@example.com",
   "not-unique-email": "Аккаунт с данным e-mail уже зарегистрирован",
-  "not-correct-length-password": "Пароль должен быть от 6 до 64 символов",
-  "not-correct-length-username": "Имя пользователя должно быть от 4 до 30 символов",
-  "not-correct-length-usernameOrEmail": "Имя пользователя должно быть от 4 до 30 символов или введите адрес электронной почты в следующем формате: example@example.com",
+  "no-password-field": "Пароль обязателен к заполнению",
+  "incorrect-password-field-length": "Пароль должен быть от 6 до 64 символов",
+  "no-username-field": "Имя пользователя обязательно к заполнению",
+  "incorrect-length-username-length": "Имя пользователя должно быть от 4 до 30 символов",
+  "incorrect-username-or-email-field-length": "Имя пользователя должно быть от 4 до 30 символов или введите адрес электронной почты в следующем формате: example@example.com",
   "forbidden-symbols-username": "Имя пользователя должно состоять только из букв и цифр",
-  "not-unique-username": "Имя пользователя занято",
+  "not-unique-username": "Имя пользователя не доступно",
   "no-username-password": "Необходимо указать имя пользователя(e-mail) и пароль",
   "incorrect-username-password": "Неправильное имя пользователя(e-mail) или пароль",
   "user-not-logged": "Вы должны быть авторизованы",
