--- a/locales/en.json
+++ b/locales/en.json
@@ -1,9 +1,12 @@
 {
-  "not-email": "You must fill out an e-mail in the following format: example@example.com",
+  "no-email-field": "Email is required",
+  "not-email": "The email must be in the format: example@example.com",
   "not-unique-email": "Account with this e-mail is already registered",
-  "not-correct-length-password": "Password must be between 6 and 64 characters",
-  "not-correct-length-username": "Username must be between 4 and 30 characters",
-  "not-correct-length-usernameOrEmail": "Username must be between 4 and 30 characters or enter an e-mail in the following format: example@example.com",
+  "no-password-field": "Password is required",
+  "incorrect-password-field-length": "Password must be between 6 and 64 characters",
+  "no-username-field": "Username is required",
+  "incorrect-length-username-length": "Username must be between 4 and 30 characters",
+  "incorrect-username-or-email-field-length": "Username must be between 4 and 30 characters or enter an e-mail in the following format: example@example.com",
   "forbidden-symbols-username": "The username must contain only letters and numbers",
   "not-unique-username": "Username is not available",
   "no-username-password": "You must specify username(e-mail) and password",
