--- a/locales/ru.json
+++ b/locales/ru.json
@@ -29,5 +29,8 @@
 
   "trip-not-found": "Поездка не найдена",
 
-  "user-not-logged": "Вы должны быть авторизованы"
+  "user-not-logged": "Вы должны быть авторизованы",
+
+  "no-article-title-field": "Заголовок статьи обязателен к заполнению",
+  "no-article-body-field": "Отсутствуект содержимое статьи"
 }
