--- a/locales/ru.json
+++ b/locales/ru.json
@@ -36,5 +36,7 @@
 
   "incorrect-get-user-articles-userId-field": "Id пользователя должно состоять только из одного числа",
   "incorrect-get-user-articles-offset-field": "Поле смещения относительно прошлых статей должно содержать только одно число",
-  "The article limit field must contain only one number": "Поле лимита статей должно содержать только одно число"
+  "The article limit field must contain only one number": "Поле лимита статей должно содержать только одно число",
+
+  "article-not-found": "Статья не найдена"
 }
