--- a/locales/en.json
+++ b/locales/en.json
@@ -1,32 +1,46 @@
 {
-	"no-email-field": "Email is required",
-	"not-email": "The email must be in the format: example@example.com",
-	"not-unique-email": "Account with this e-mail is already registered",
-	"no-password-field": "Password is required",
-	"incorrect-password-field-length": "Password must be between 6 and 64 characters",
-	"no-username-field": "Username is required",
-	"incorrect-length-username-length": "Username must be between 4 and 30 characters",
-	"incorrect-username-or-email-field-length": "Username must be between 4 and 30 characters or enter an e-mail in the following format: example@example.com",
-	"forbidden-symbols-username": "The username must contain only letters and numbers",
-	"not-unique-username": "Username is not available",
-	"no-username-password": "You must specify username(e-mail) and password",
-	"incorrect-username-password": "Incorrect username(e-mail) or password",
-	"no-country-code-field": "Country is required",
-	"incorrect-trip-country-code": "Invalid country code",
-	"no-city-field": "City is required",
-	"incorrect-trip-city-field-length": "City name must be between 2 and 300 characters",
-	"no-start-date-field": "Start date is required",
-	"no-end-date-field": "End date is required",
-	"incorrect-start-date-trip-field": "Invalid start date",
-	"incorrect-end-date-trip-field": "Invalid end date",
-	"incorrect-trip-article-length": "Trip article should not be longer than 2500 characters",
-	"trip-not-found": "Trip not found",
-	"user-not-logged": "You must be logged in",
-	"no-article-title-field": "Title of the article is required",
-	"no-article-body-field": "Content of the article is required",
-	"incorrect-get-user-articles-userId-field": "User id field must contain only one number",
-	"incorrect-get-user-articles-offset-field": "The offset field must contain only one number",
-	"incorrect-get-user-articles-limit-field": "The article limit field must contain only one number",
-	"article-not-found": "Article not found",
-	"not-found": "not-found"
+  "no-email-field": "Email is required",
+  "not-email": "The email must be in the format: example@example.com",
+  "not-unique-email": "Account with this e-mail is already registered",
+
+  "no-password-field": "Password is required",
+  "incorrect-password-field-length": "Password must be between 6 and 64 characters",
+
+  "no-username-field": "Username is required",
+  "incorrect-length-username-length": "Username must be between 4 and 30 characters",
+  "incorrect-username-or-email-field-length": "Username must be between 4 and 30 characters or enter an e-mail in the following format: example@example.com",
+  "forbidden-symbols-username": "The username must contain only letters and numbers",
+  "not-unique-username": "Username is not available",
+  "no-username-password": "You must specify username(e-mail) and password",
+  "incorrect-username-password": "Incorrect username(e-mail) or password",
+
+  "no-country-code-field": "Country is required",
+  "incorrect-trip-country-code": "Invalid country code",
+
+  "no-city-field": "City is required",
+  "incorrect-trip-city-field-length": "City name must be between 2 and 300 characters",
+
+  "no-start-date-field": "Start date is required",
+  "no-end-date-field": "End date is required",
+  "incorrect-start-date-trip-field": "Invalid start date",
+  "incorrect-end-date-trip-field": "Invalid end date",
+
+  "incorrect-trip-article-length": "Trip article should not be longer than 2500 characters",
+
+  "trip-not-found": "Trip not found",
+
+  "user-not-logged": "You must be logged in",
+
+  "no-article-title-field": "Title of the article is required",
+  "no-article-body-field": "Content of the article is required",
+
+  "incorrect-get-user-articles-userId-field": "User id field must contain only one number",
+  "incorrect-get-user-articles-offset-field": "The offset field must contain only one number",
+  "incorrect-get-user-articles-limit-field": "The article limit field must contain only one number",
+
+  "article-not-found": "Article not found",
+
+  "incorrect-put-remove-like-articleId-field": "The article id should be 7 characters long",
+
+  "incorrect-get-article-id-field": "The article id should be 7 characters long"
 }
