--- a/locales/ru.json
+++ b/locales/ru.json
@@ -38,5 +38,9 @@
   "incorrect-get-user-articles-offset-field": "Поле смещения относительно прошлых статей должно содержать только одно число",
   "The article limit field must contain only one number": "Поле лимита статей должно содержать только одно число",
 
-  "article-not-found": "Статья не найдена"
+  "article-not-found": "Статья не найдена",
+
+  "incorrect-put-remove-like-articleId-field": "ID статьи должен состоять из 7 символов",
+
+  "incorrect-get-article-id-field": "ID статьи должен состоять из 7 символов"
 }
