--- a/locales/en.json
+++ b/locales/en.json
@@ -36,5 +36,11 @@
 	"incorrect-user-id-param-get-image-article": "User id field must contain only one number",
 	"incorrect-image-id-param-get-image-article": "Image id must consist of a string",
 	"incorrect-trip-id-param-delete-trip": "ID trip should consist of a number",
-	"not-found": "not-found"
+	"not-found": "not-found",
+	"get-articles_incorrect-sort": "Sorting can be by new or popular articles",
+	"get-articles_incorrect-tag": "Tag must be between 1 and 255 characters",
+	"get-articles_incorrect-rating": "The rating should consist of one number",
+	"get-articles_incorrect-offset": "The offset should consist of one number",
+	"get-articles_incorrect-limit": "The limit should consist of one number",
+	"get-articles_incorrect-period": "The list of articles can only be for the following period: day, week, month, week"
 }
